test_regress/t/t_const_dec_mixed_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed into the Public Domain, for any use,
// without warranty, 2005-2007 by Wilson Snyder.

module t (/*AUTOARG*/);

   parameter [200:0] MIXED = 32'dx_1;

endmodule
